<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res/android">

    <string name="app_name">C5V Pro</string>
    <string name="intro">Intro</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about_activity">About C5V</string>
    <string name="C5VAbout">C5V Full edition\nCapture, Store and Visualise for your CSV data \n\nVisit www.MyWorkingApp.com for more info and tutorials\n\n\n\n\n\n\n\n©2016 www.MyWorkingApp.com\n\n</string>
    <string name="exit">Exit</string>
    <string name="nextButton">Next</string>
    <string name="generalSettingHeader">General</string>
    <!-- labels -->
    <string name="labelStart">start C5V</string>
    <!-- Actions -->
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <!-- intro slide text -->
    <string name="start_intro">Intro</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_delete">Delete</string>
    <string name="action_about">About</string>

    <string name="intro_text1"><![CDATA[ <b><H>What is the C5V app?</H></b><small><br/>
•	C5V app demonstrating CSV data acquisition to create shared value developed in collaboration with cOGnIT.<br>
<br>
Creating shared value: <br>
http://en.wikipedia.org/wiki/Creating_shared_value<br><br>
CSV data:<br>
- Capture,<br>
- Storage<br>
- Vision.<br>
  ]]></string>
    <string name="intro_text2"><![CDATA[ <b>Things you should know…</b><small><br/>
We do not log any data, record any sound or video from the app. Your privacy is ensured.<br>
Please consult our privacy policy for further details.<br>
  ]]></string>
    <string name="intro_text3">
  <![CDATA[ <b>To know more</b><br/><small>


We welcome any feedback and encourage you to contact us if you discover any issue.<br>

To know more, visit our website:<br>
http://www.MyWorkingApp.com/c5v/index.html<br>
]]>
</string>

    <string name="free_dialog_title">C5V Free version</string>
    <string name="free_dialog_body">This version operates for 10 records only and can only export one log. Unrestricted sessions will be available in paid version of C5V on Google Play.</string>

    <string name="copyrights">©2016 MyWorkingApp.com</string>
    <string name="title_activity_license_check" >LicenseCheck</string>
    <string name="check_license">Check license</string>
    <string name="checking_license">Checking license...</string>
    <string name="dont_allow">Don\'t allow user access</string>
    <string name="allow">Allow user access</string>
    <string name="application_error">Application error: %1$s</string>
    <!-- Unlicensed dialog messages -->
    <string name="unlicensed_dialog_title">C5V is not licensed</string>
    <string name="unlicensed_dialog_body">C5V is not licensed. Please purchase it from Android Market.</string>
    <string name="buy_button">Buy app</string>
    <string name="quit_button">Exit</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="action_exit">Exit</string>
    <string name="AboutText">About </string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_share">Export</string>
    <string name="audio_label">Audio</string>
    <string name="photo_label">Photo</string>
    <string name="pen_label">NeoPen</string>
    <string name="video_label">Video</string>
    <string name="location_access_rq">C5V needs location access to fully qualify log data.Do you want to allow location access?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title">Title</string>
    <string name="title_hint">Enter a title for your log</string>
    <string name="text_hint">Enter text entry for your log</string>
    <string name="pen_notyet">Pen not implemented yet</string>
    <string name="action_switch">Title-Time</string>
    <string name="chooser_audio_title">Choose audio record:</string>
    <string name="chooser_photo_title">Choose photo:</string>
    <string name="chooser_video_title">Choose video:</string>

</resources>
