<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.MyWorkingApp.C5V.AddActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTitle"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/dateView"
                android:layout_alignEnd="@+id/dateView"
                android:minLines="2"
                android:hint="@string/title_hint"
                android:background="#F9FFA8"
                android:textColor="@android:color/black"
                android:layout_marginBottom="2dp"
                android:singleLine="true" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1"
                android:background="#030300">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="108dp"
                    android:id="@+id/editText"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignRight="@+id/dateView"
                    android:layout_alignEnd="@+id/dateView"
                    android:minLines="2"
                    android:hint="@string/text_hint"
                    android:background="#8BF7EF"
                    android:textColor="@android:color/black" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/audio_label"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/textView"
                            android:layout_gravity="center_horizontal" />

                        <ImageButton
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:id="@+id/imageButtonAudio"
                            android:src="@drawable/ic_action_microphone"
                            android:onClick="recordSoundOnClick"
                            android:layout_gravity="top" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/photo_label"
                            android:id="@+id/textView5"
                            android:layout_gravity="center_horizontal" />

                        <ImageButton
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:id="@+id/imageButtonPhoto"
                            android:src="@drawable/ic_action_photo"
                            android:onClick="recordPhotoOnClick" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/video_label"
                            android:id="@+id/textView4"
                            android:layout_gravity="center_horizontal" />

                        <ImageButton
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:id="@+id/imageButtonVideo"
                            android:src="@drawable/ic_action_video"
                            android:onClick="recordVideoOnClick" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/pen_label"
                            android:id="@+id/textView2"
                            android:layout_gravity="center_horizontal" />

                        <ImageButton
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:id="@+id/imageButtonPen"
                            android:src="@drawable/ic_pen"
                            android:onClick="recordPenOnClick"
                            android:layout_gravity="left" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OK"
                android:id="@+id/OKbutton"
                android:layout_gravity="right"
                android:layout_alignParentRight="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="false"
                android:layout_alignParentBottom="true"
                android:onClick="OkOnClick"
                android:backgroundTint="#C8FFAA"
                android:textSize="@dimen/abc_text_size_medium_material" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
